--- a/owncloud启动器.csproj
+++ b/owncloud启动器.csproj
@@ -54,15 +54,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CloudDiskForm.cs">
+    <Compile Include="subMainForm\CloudDiskForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CloudDiskForm.Designer.cs">
+    <Compile Include="subMainForm\CloudDiskForm.Designer.cs">
       <DependentUpon>CloudDiskForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="CodeAnalysis.cs" />
-    <Compile Include="ErrorCode.cs" />
-    <Compile Include="FileTree.cs" />
+    <Compile Include="codeClass\CodeAnalysis.cs" />
+    <Compile Include="configClass\ErrorCode.cs" />
+    <Compile Include="fileSystemClass\FileTree.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,13 +81,12 @@
     <Compile Include="GlassButton.Designer.cs">
       <DependentUpon>GlassButton.cs</DependentUpon>
     </Compile>
-    <Compile Include="IconUnit.cs" />
-    <Compile Include="Int32Dec64Convert.cs" />
-    <Compile Include="JsonHelper.cs" />
-    <Compile Include="LoadingForm.cs">
+    <Compile Include="codeClass\Int32Dec64Convert.cs" />
+    <Compile Include="codeClass\JsonHelper.cs" />
+    <Compile Include="subLoginForm\LoadingForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LoadingForm.Designer.cs">
+    <Compile Include="subLoginForm\LoadingForm.Designer.cs">
       <DependentUpon>LoadingForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.cs">
@@ -96,12 +95,12 @@
     <Compile Include="MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="MyConfig.cs" />
-    <Compile Include="NetHelper.cs" />
-    <Compile Include="Order.cs" />
+    <Compile Include="configClass\MyConfig.cs" />
+    <Compile Include="netClass\NetHelper.cs" />
+    <Compile Include="configClass\Order.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reporter.cs" />
+    <Compile Include="IOClass\Reporter.cs" />
     <Compile Include="SettingForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,21 +119,21 @@
     <Compile Include="subSettingForm\SettingSyncForm.Designer.cs">
       <DependentUpon>SettingSyncForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ShareForm.cs">
+    <Compile Include="subMainForm\ShareForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ShareForm.Designer.cs">
+    <Compile Include="subMainForm\ShareForm.Designer.cs">
       <DependentUpon>ShareForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="SyncForm.cs">
+    <Compile Include="subMainForm\SyncForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SyncForm.Designer.cs">
+    <Compile Include="subMainForm\SyncForm.Designer.cs">
       <DependentUpon>SyncForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserInfo.cs" />
-    <Compile Include="UserLocalInfo.cs" />
-    <EmbeddedResource Include="CloudDiskForm.resx">
+    <Compile Include="userClass\UserInfo.cs" />
+    <Compile Include="userClass\UserLocalInfo.cs" />
+    <EmbeddedResource Include="subMainForm\CloudDiskForm.resx">
       <DependentUpon>CloudDiskForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.byn.resx">
@@ -146,7 +145,7 @@
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LoadingForm.resx">
+    <EmbeddedResource Include="subLoginForm\LoadingForm.resx">
       <DependentUpon>LoadingForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
@@ -171,10 +170,10 @@
     <EmbeddedResource Include="subSettingForm\SettingSyncForm.resx">
       <DependentUpon>SettingSyncForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ShareForm.resx">
+    <EmbeddedResource Include="subMainForm\ShareForm.resx">
       <DependentUpon>ShareForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="SyncForm.resx">
+    <EmbeddedResource Include="subMainForm\SyncForm.resx">
       <DependentUpon>SyncForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
@@ -301,6 +300,7 @@
   <ItemGroup>
     <None Include="Resources\function_arrow_gray_forward_button.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
