--- a/owncloud启动器.csproj
+++ b/owncloud启动器.csproj
@@ -63,16 +63,16 @@
     <Compile Include="codeClass\CodeAnalysis.cs" />
     <Compile Include="configClass\ErrorCode.cs" />
     <Compile Include="fileSystemClass\FileTree.cs" />
-    <Compile Include="Form2.cs">
+    <Compile Include="Utility\Form_Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="Utility\Form_Login.Designer.cs">
+      <DependentUpon>Form_Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="GlassButton.cs">
+    <Compile Include="myWidget\GlassButton.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="GlassButton.Designer.cs">
+    <Compile Include="myWidget\GlassButton.Designer.cs">
       <DependentUpon>GlassButton.cs</DependentUpon>
     </Compile>
     <Compile Include="codeClass\Int32Dec64Convert.cs" />
@@ -83,10 +83,10 @@
     <Compile Include="subLoginForm\LoadingForm.Designer.cs">
       <DependentUpon>LoadingForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainWindow.cs">
+    <Compile Include="Utility\MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainWindow.Designer.cs">
+    <Compile Include="Utility\MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="configClass\MyConfig.cs" />
@@ -95,10 +95,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IOClass\Reporter.cs" />
-    <Compile Include="SettingForm.cs">
+    <Compile Include="Utility\SettingForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SettingForm.Designer.cs">
+    <Compile Include="Utility\SettingForm.Designer.cs">
       <DependentUpon>SettingForm.cs</DependentUpon>
     </Compile>
     <Compile Include="subSettingForm\SettingPrimaryForm.cs">
@@ -136,13 +136,13 @@
     <EmbeddedResource Include="subMainForm\CloudDiskForm.resx">
       <DependentUpon>CloudDiskForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="Utility\Form_Login.resx">
+      <DependentUpon>Form_Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="subLoginForm\LoadingForm.resx">
       <DependentUpon>LoadingForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainWindow.resx">
+    <EmbeddedResource Include="Utility\MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -155,7 +155,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="SettingForm.resx">
+    <EmbeddedResource Include="Utility\SettingForm.resx">
       <DependentUpon>SettingForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="subSettingForm\SettingPrimaryForm.resx">
