--- a/owncloud启动器.csproj
+++ b/owncloud启动器.csproj
@@ -54,6 +54,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dialog\DeleteFileDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dialog\DeleteFileDialog.Designer.cs">
+      <DependentUpon>DeleteFileDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="subMainForm\CloudDiskForm.cs">
       <SubType>Form</SubType>
     </Compile>
