--- a/owncloud启动器.csproj
+++ b/owncloud启动器.csproj
@@ -39,7 +39,9 @@
     <Reference Include="RestSharp">
       <HintPath>..\..\文献\DLL\RestSharp.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>C:\Windows\Microsoft.NET\Framework\v2.0.50727\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
@@ -54,11 +56,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cmdClass\CMDComand.cs" />
     <Compile Include="dialog\DeleteFileDialog.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dialog\DeleteFileDialog.Designer.cs">
       <DependentUpon>DeleteFileDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="dialog\FileAttributeDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dialog\FileAttributeDialog.Designer.cs">
+      <DependentUpon>FileAttributeDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="subMainForm\CloudDiskForm.cs">
       <SubType>Form</SubType>
@@ -139,6 +148,12 @@
     </Compile>
     <Compile Include="userClass\UserInfo.cs" />
     <Compile Include="userClass\UserLocalInfo.cs" />
+    <EmbeddedResource Include="dialog\DeleteFileDialog.resx">
+      <DependentUpon>DeleteFileDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dialog\FileAttributeDialog.resx">
+      <DependentUpon>FileAttributeDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="subMainForm\CloudDiskForm.resx">
       <DependentUpon>CloudDiskForm.cs</DependentUpon>
     </EmbeddedResource>
