--- a/owncloud启动器.csproj
+++ b/owncloud启动器.csproj
@@ -327,7 +327,18 @@
   <ItemGroup>
     <None Include="Resources\function_arrow_gray_forward_button.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\cloudDisk.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\share.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\share_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cloudDisk1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
