--- a/owncloud启动器.csproj
+++ b/owncloud启动器.csproj
@@ -69,6 +69,12 @@
     <Compile Include="dialog\FileAttributeDialog.Designer.cs">
       <DependentUpon>FileAttributeDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="loadingForm\LoadEncryption.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="loadingForm\LoadEncryption.Designer.cs">
+      <DependentUpon>LoadEncryption.cs</DependentUpon>
+    </Compile>
     <Compile Include="subMainForm\CloudDiskForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,10 +104,10 @@
     </Compile>
     <Compile Include="codeClass\Int32Dec64Convert.cs" />
     <Compile Include="codeClass\JsonHelper.cs" />
-    <Compile Include="subLoginForm\LoadingForm.cs">
+    <Compile Include="loadingForm\LoadingForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="subLoginForm\LoadingForm.Designer.cs">
+    <Compile Include="loadingForm\LoadingForm.Designer.cs">
       <DependentUpon>LoadingForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Utility\MainWindow.cs">
@@ -160,6 +166,9 @@
     <EmbeddedResource Include="dialog\FileAttributeDialog.resx">
       <DependentUpon>FileAttributeDialog.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="loadingForm\LoadEncryption.resx">
+      <DependentUpon>LoadEncryption.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="subMainForm\CloudDiskForm.resx">
       <DependentUpon>CloudDiskForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -169,7 +178,7 @@
     <EmbeddedResource Include="Utility\Form_Login.resx">
       <DependentUpon>Form_Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="subLoginForm\LoadingForm.resx">
+    <EmbeddedResource Include="loadingForm\LoadingForm.resx">
       <DependentUpon>LoadingForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Utility\MainWindow.resx">
@@ -338,6 +347,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\cloudDisk1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="subLoginForm\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
