--- a/owncloud启动器.csproj
+++ b/owncloud启动器.csproj
@@ -69,6 +69,12 @@
     <Compile Include="dialog\FileAttributeDialog.Designer.cs">
       <DependentUpon>FileAttributeDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="loadingForm\LoadDeleteFiles.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="loadingForm\LoadDeleteFiles.Designer.cs">
+      <DependentUpon>LoadDeleteFiles.cs</DependentUpon>
+    </Compile>
     <Compile Include="loadingForm\LoadDisCryption.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -172,6 +178,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dialog\FileAttributeDialog.resx">
       <DependentUpon>FileAttributeDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="loadingForm\LoadDeleteFiles.resx">
+      <DependentUpon>LoadDeleteFiles.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="loadingForm\LoadDisCryption.resx">
       <DependentUpon>LoadDisCryption.cs</DependentUpon>
