--- a/owncloud启动器.csproj
+++ b/owncloud启动器.csproj
@@ -446,6 +446,12 @@
   <ItemGroup>
     <None Include="Resources\menu_exit.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\menu_search_deep_blue.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\menu_search_blue.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
