--- a/owncloud启动器.csproj
+++ b/owncloud启动器.csproj
@@ -110,12 +110,6 @@
     <Compile Include="subMainForm\SettingUserInfo.Designer.cs">
       <DependentUpon>SettingUserInfo.cs</DependentUpon>
     </Compile>
-    <Compile Include="subMainForm\subCloudDisk\SearchResultForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="subMainForm\subCloudDisk\SearchResultForm.Designer.cs">
-      <DependentUpon>SearchResultForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="subMainForm\subUserInfo\SettingUserPassword.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -221,9 +215,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="subMainForm\SettingUserInfo.resx">
       <DependentUpon>SettingUserInfo.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="subMainForm\subCloudDisk\SearchResultForm.resx">
-      <DependentUpon>SearchResultForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="subMainForm\subUserInfo\SettingUserPassword.resx">
       <DependentUpon>SettingUserPassword.cs</DependentUpon>
@@ -406,6 +397,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="subLoginForm\" />
+    <Folder Include="subMainForm\subCloudDisk\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\arrow_drop.png" />
